[gd_scene load_steps=21 format=3 uid="uid://cjpr1b3wgqyej"]

[ext_resource type="Script" path="res://scripts/in_game.gd" id="1_6qcy7"]
[ext_resource type="Texture2D" uid="uid://kn34nwtgnhnt" path="res://assets/disegno_bottoni.png" id="2_0oyud"]
[ext_resource type="Texture2D" uid="uid://lfwgnuryq8rh" path="res://assets/mondo_normale.png" id="2_oh4uy"]
[ext_resource type="Script" path="res://scenes/sprite_2d.gd" id="3_46w4r"]
[ext_resource type="FontFile" uid="uid://dqqcurrqs4ko0" path="res://assets/ByteBounce.ttf" id="4_7g4k8"]
[ext_resource type="Texture2D" uid="uid://dxro3kskbxknd" path="res://assets/New Piskel (2).png" id="6_3pqcb"]
[ext_resource type="Script" path="res://scenes/events.gd" id="6_vhk76"]
[ext_resource type="PackedScene" uid="uid://dp56fmpt2l14o" path="res://scenes/event_tab.tscn" id="7_ndav0"]
[ext_resource type="Script" path="res://scenes/stats_button.gd" id="7_yyic5"]
[ext_resource type="Script" path="res://scenes/opt_button.gd" id="8_sj4vq"]
[ext_resource type="AudioStream" uid="uid://dc67a6nmf8rgw" path="res://assets/sounds/CLICK 2.wav" id="9_fcm2l"]
[ext_resource type="AudioStream" uid="uid://cj8yo1sugspj4" path="res://assets/sounds/CLICK 1.wav" id="10_wqamb"]
[ext_resource type="PackedScene" uid="uid://dg1sjsldykkju" path="res://scenes/options_tab.tscn" id="13_7x8iu"]

[sub_resource type="CanvasTexture" id="CanvasTexture_53o80"]

[sub_resource type="Theme" id="Theme_roxym"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mkth5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j350d"]
texture = ExtResource("2_0oyud")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(1, 85, 38, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xpldp"]
texture = ExtResource("2_0oyud")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(42, 55, 38, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ratmo"]
texture = ExtResource("2_0oyud")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(1, 70, 19, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_45u0t"]
texture = ExtResource("2_0oyud")
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
region_rect = Rect2(42, 40, 19, 14)

[node name="inGame" type="Node2D"]
script = ExtResource("1_6qcy7")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.0139623, 0.00027156, 0.0592547, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(2.99973, 1.99986)
scale = Vector2(3770, 2383.15)
texture = SubResource("CanvasTexture_53o80")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.670166, -7)
rotation = 3.14159
scale = Vector2(2.81964, -2.76652)
texture = ExtResource("2_oh4uy")
script = ExtResource("3_46w4r")

[node name="Events" type="Button" parent="."]
offset_left = -60.0
offset_top = 127.0
offset_right = 61.0
offset_bottom = 167.0
theme = SubResource("Theme_roxym")
theme_override_fonts/font = ExtResource("4_7g4k8")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkth5")
theme_override_styles/hover = SubResource("StyleBoxTexture_j350d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xpldp")
theme_override_styles/normal = SubResource("StyleBoxTexture_j350d")
text = "Events"
script = ExtResource("6_vhk76")

[node name="StatsButton" type="Button" parent="."]
offset_left = -317.0
offset_top = -169.0
offset_right = -257.0
offset_bottom = -128.0
theme = SubResource("Theme_roxym")
theme_override_fonts/font = ExtResource("4_7g4k8")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkth5")
theme_override_styles/hover = SubResource("StyleBoxTexture_ratmo")
theme_override_styles/pressed = SubResource("StyleBoxTexture_45u0t")
theme_override_styles/normal = SubResource("StyleBoxTexture_ratmo")
text = "Stats"
script = ExtResource("7_yyic5")

[node name="OptButton" type="Button" parent="."]
offset_left = 255.0
offset_top = -169.0
offset_right = 317.0
offset_bottom = -128.0
theme = SubResource("Theme_roxym")
theme_override_fonts/font = ExtResource("4_7g4k8")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_mkth5")
theme_override_styles/hover = SubResource("StyleBoxTexture_ratmo")
theme_override_styles/pressed = SubResource("StyleBoxTexture_45u0t")
theme_override_styles/normal = SubResource("StyleBoxTexture_ratmo")
text = "
"
script = ExtResource("8_sj4vq")

[node name="Cog" type="Sprite2D" parent="OptButton"]
position = Vector2(31, 21)
scale = Vector2(2.25, 2.25)
texture = ExtResource("6_3pqcb")
region_enabled = true
region_rect = Rect2(9, 6, 16, 16)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.7, 1.7)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 88.0
offset_top = -59.0
offset_right = 128.0
offset_bottom = -19.0
scale = Vector2(0.80463, 0.730589)

[node name="EventGridContainer" type="GridContainer" parent="."]
offset_left = -201.0
offset_top = -168.0
offset_right = -161.0
offset_bottom = -128.0

[node name="EventTab" parent="." instance=ExtResource("7_ndav0")]
visible = false
offset_left = -580.0
offset_top = -310.0
offset_right = -580.0
offset_bottom = -310.0

[node name="ClickPressed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_fcm2l")

[node name="ClickHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_wqamb")

[node name="options_tab" parent="." instance=ExtResource("13_7x8iu")]
visible = false
offset_left = -573.0
offset_top = -303.0
offset_right = -573.0
offset_bottom = -303.0

[connection signal="mouse_entered" from="Events" to="Events" method="_on_mouse_entered"]
[connection signal="pressed" from="Events" to="." method="_on_events_pressed"]
[connection signal="pressed" from="Events" to="Events" method="_on_pressed"]
[connection signal="mouse_entered" from="StatsButton" to="StatsButton" method="_on_mouse_entered"]
[connection signal="pressed" from="StatsButton" to="StatsButton" method="_on_pressed"]
[connection signal="mouse_entered" from="OptButton" to="OptButton" method="_on_mouse_entered"]
[connection signal="pressed" from="OptButton" to="OptButton" method="_on_pressed"]
